--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: pretty
 pygments: true
-url: georgeredinger.github.com
+url: http://georgeredinger.github.com
 markdown: rdiscount
 rdiscount:
   extensions: [smart]
